[package]
name = "amsdb-rust"
version = "0.1.0"
authors = ["Alexander Tesfamichael <alex.tesfamichael@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
regex = "1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
